# never

./: .clang-format  .deps  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  _config.yml  appveyor.yml  arg.c  arg.h  bytecode.c  bytecode.h  constred.c  constred.h  expr.c  expr.h  freevar.c  freevar.h  func.c  func.h  gc.c  gc.h  gencode.c  gencode.h  getopt.c  getopt.h  index.md  libmath.c  libmath.h  libvm.c  libvm.h  main.c  mkdocs.yml  nev.c  nev.h  never-init.js  never.c  never.h  (+35 more)
.github/workflows/: cmake-single-platform.yml
back/: bytecode.c  bytecode.h  dlcache.c  dlcache.h  dltab.c  dltab.h  emit.c  emit.h  exctab.c  exctab.h  ffi.c  ffi.h  fficall.c  fficall.h  functab.c  functab.h  gc.c  gc.h  gencode.c  gencode.h  libmath.c  libmath.h  libvm.c  libvm.h  module.c  module.h  nev.c  object.c  program.c  strtab.c  strtab.h  utils.c  utils.h  vm.c  vm.h  vmexec.c  vmexec.h  vmffi.c  vmffi.h
docs/: _config.yml  brainf.md  btree.md  contact.md  curradd.md  ffi.md  fizzbuzz.md  index.md  never-cm.js  never-lang.js  never-web.html  never-web.md  never_neural.md  perceptron.md  pitria.md  qsort.md  rodcut.md  tailrec.md  wave.md
docs/custom_theme/: highlight.min.js  install.sh  main.html  never.js  never.min.js
dyntest/: Makefile  dyntest.c  dyntest.h
front/: array.c  array.h  bind.c  bind.h  constred.c  constred.h  decl.c  decl.h  dim.c  dim.h  emit.c  emit.h  enumerator.c  enumerator.h  enumred.c  enumred.h  enums.c  enums.h  except.c  except.h  expr.c  expr.h  forin.c  forin.h  freevar.c  freevar.h  func.c  func.h  gencode.c  gencode.h  hash.c  hash.h  ids.c  ids.h  iflet.c  iflet.h  inttab.c  inttab.h  libmath.c  libmath.h  (+59 more)
include/: nev.h  object.h  program.h  vm.h
sample/: sample1.nev  sample10.nev  sample100.nev  sample101.nev  sample102.nev  sample103.nev  sample104.nev  sample105.nev  sample106.nev  sample11.nev  sample110.nev  sample111.nev  sample112.nev  sample113.nev  sample114.nev  sample115.nev  sample116.nev  sample117.nev  sample118.nev  sample119.nev  sample12.nev  sample120.nev  sample121.nev  sample122.nev  sample123.nev  sample13.nev  sample130.nev  sample131.nev  sample132.nev  sample133.nev  sample134.nev  sample14.nev  sample140.nev  sample141.nev  sample15.nev  sample150.nev  sample151.nev  sample152.nev  sample153.nev  sample154.nev  (+556 more)
sample/lib/: EM.nev  EN.nev  mfive.nev  mone.nev  mseven.nev  msix.nev  mtail.nev  mthree.nev  mtwo.nev  raylib.nev  raylib_camera.nev  raylib_files.nev  raylib_gamepad.nev  raylib_keyboard.nev  raylib_models.nev  raylib_mouse.nev  raylib_shapes.nev  raylib_text.nev  raylib_textures.nev  raylib_touch.nev  sample_raylib_cubes.nev  sample_raylib_cubes_fv.nev  sample_raylib_fps.nev  sample_raylib_fps_fv.nev
test/: CMakeLists.txt  test_dlcache.c  test_exctab.c  test_exec.c  test_ffi.c  test_ffi_me.c  test_freevar.c  test_functab.c  test_gc.c  test_inttab.c  test_libmath.c  test_moduletab.c  test_object.c  test_print_bytecode.c  test_scanner.c  test_strtab.c  test_strutil.c  test_symtab.c  test_vm.c
